--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,7 +5,11 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-  
+    <h1>Pig Latinizer!</h1>
+    <form method='POST' action='/piglatinize'>
+      <h3>Enter your phrase: </h3><input type='text' name='user_phrase'></h3>
+      <input type='submit'>
+      <h1>user_phrase</h1>
+    </form>
   </body>
 </html>
