--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,7 +5,11 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-  
+    <h1>Pig Latinizer!</h1>
+  <form action="/piglatinize" method="post">
+  <label for="user_phrase" > Enter your phrase: </label>
+  <input id="user_phrase" type="text" name="user_phrase">
+  <input type="submit">
+  </form>
   </body>
 </html>
