--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -7,5 +7,10 @@
   <body>
     <h1>Pig Latinizer</h1>
   
+    <form method="POST" action="/">
+      <label for="input_text">Enter your text to Piglatinized:</label><br>
+      <textarea name="input_text" id="input_text" rows="8" cols="50" placeholder="Oink Oink.."></textarea><br>
+      <input type="submit" value="Submit">
+    </form>
   </body>
 </html>
