--- a/views/piglatinized.erb
+++ b/views/piglatinized.erb
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>OIIIINK</h1><br />
-    <p><%= @transformed_text %></p>
+    <p><%= @pl_phrase %></p>
   </body>
 </html>
