--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,7 +5,14 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-  
+    <h1>Pig Latinizer!</h1>
+    <h2>Enter your phrase:</h2>
+    
+    <form method="POST" action="/piglatinize">
+    <textarea name="user_phrase"></textarea>
+    <input type="submit" id="Submit">
+    </form>
+
+
   </body>
 </html>
