--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -3,9 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>title</title>
-  </head>
-  <body>
-    <h1>Pig Latinizer</h1>
-  
-  </body>
+    </head>
+    <body>
+      <h1>Pig Latinizer!</h1>
+    Enter your phrase: 
+    <form method="POST" action="/piglatinize">
+    <input type="text" id="stray" name='user_phrase'>
+    <input type="submit" value="submit">
+    
+      </form>
+    </body>
+    
 </html>
