--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,7 +5,11 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-  
+    <h1>Pig Latinizer!</h1>
+   <form method="POST" action="/piglatinize">
+      <label for="user_phrase">Enter your phrase:</label><br>
+      <textarea name="user_phrase" id="user_phrase" rows="8" cols="50" placeholder="Oink.."></textarea><br>
+      <input type="submit" value="Submit">
+    </form>
   </body>
 </html>
