--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,9 +5,11 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-  <form method="POST" action="/">
-    <textarea name="user_input"></textarea>
+    <h1>Pig Latinizer!</h1>
+    <h2>Enter your phrase:</h2>
+  <form method="POST" action="/piglatinize">
+    <textarea name="user_phrase"></textarea>
+    <input type="submit" name="Submit">
   
   </form>
   </body>
